--- a/scan_sources/pyproject.toml
+++ b/scan_sources/pyproject.toml
@@ -6,6 +6,9 @@ authors = [{ name = "Your Name", email = "you@example.com" }]
 requires-python = ">=3.10,<3.13"
 dependencies = [
     "crewai[tools]>=0.100.1,<1.0.0",
+    "exa-py>=1.9.1",
+    "firecrawl-py>=1.15.0",
+    "scrapfly-sdk>=0.8.21",
 ]
 
 [project.scripts]
