--- a/scan_sources/src/scan_sources/crews/research_crew/config/tasks.yaml
+++ b/scan_sources/src/scan_sources/crews/research_crew/config/tasks.yaml
@@ -20,12 +20,13 @@ futurist_research:
     Research process:
     1. As part of your research process, you must include the {research_sources} in your searches.
     2. Identify initial set of market forces from each source.
-    3. For each market force, capture the relevant details according to the RawMarketForce format, then ask yourself: "What related or adjacent market forces might this indicate?"
-    4. Use the URL and scrape tool to extract the content you require.
-    5. Expand your list with these adjacent forces.
-    6. For any new force identified, repeat steps 3-5.
-    7. Continue until you have at least {minimum_number_of_forces} market forces.
-    8. Do not include sources over 1 year old, considering the current date is {date}
+    3. If the user has provided a list of specific points of interest: {specific_points_of_interest}, use them to guide your research.
+    4. For each market force, capture the relevant details according to the RawMarketForce format, then ask yourself: "What related or adjacent market forces might this indicate?"
+    5. Use the URL and scrape tool to extract the content you require.
+    6. Expand your list with these adjacent forces.
+    7. For any new force identified, repeat steps 4-6.
+    8. Continue until you have at least {minimum_number_of_forces} market forces.
+    9. Do not include sources over 1 year old, considering the current date is {date}
     
     Remember: Thorough research requires multiple iterations of discovery and expansion.
 
